Added a few animations

--- a/Client/faq.html
+++ b/Client/faq.html
@@ -14,7 +14,7 @@
 <header>
 	<img id="logo" src="Resources/logo.png">
 	<div><a href="faq.html"> FAQ </a></div>
-	<div><a id="showLogIn"> Log in </a></div>
+	<div id="showLogIn"><a> Log in </a></div>
 </header>
 <main>
 	<img src="Resources/triangle.png" id="triangle">
