--- a/Client/index.html
+++ b/Client/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>ToDo++</title>
 	<link rel="stylesheet" type="text/css" href="CSS/index.css">
-	<link href="https://fonts.googleapis.com/css?family=Passion+One|Fredoka+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Passion+One|Fredoka+One|Ubuntu" rel="stylesheet">
 	<link rel="icon" href="Resources/favicon.ico" type="image/x-icon" />
 </head>
 <script> 
@@ -24,6 +24,7 @@
 	</div>
 	<div id="content">
 		<p><span id="AnimT">T</span><span id="AnimO1">o</span><span id="AnimD">D</span><span id="AnimO2">o</span><span id="AnimPlus1">+</span><span id="AnimPlus2">+</span><span class="cursor">&#x25AE</span></p>
+		<p id="moto">Simple, elegant and better than anything else.</p>
 		<div id="enroll">Join now!</div>
 	</div>
 </main>
