--- a/Client/todoapp.html
+++ b/Client/todoapp.html
@@ -3,6 +3,7 @@
 <head>
 	<title>ToDo++</title>
 	<link rel="stylesheet" type="text/css" href="CSS/todoapp.css">
+	<link href="https://fonts.googleapis.com/css?family=Passion+One|Fredoka+One|Ubuntu|Anton" rel="stylesheet">
 	<link rel="icon" href="Resources/favicon.ico" type="image/x-icon" />
 </head>
 <script> 
@@ -11,20 +12,18 @@
 <body>
 <header>
 	<a href="index.html"> <img id="logo" src="Resources/logo.png"> </a>
-	<div><img id="MenuIcon" src="Resources/MenuIcon.png"><p style="margin-left:8px; margin-right: 5px;"> | </p> <a href="faq.html"> FAQ </a></div>
+	<div><img id="MenuIcon" src="Resources/MenuIcon.png"></div>
 
 </header>
 <main>
-	<div id="menuDiv">
-		<div id="menu">
-			<table id="menuContent">
-				<tr><td><img src="Resources/UserIcon.svg"><span style="font-size: 2em; margin:0px;">John Doe</span></td></tr>
-				<tr><td>Log out</td></tr>
-				<tr><td>Settings</td></tr>
-			</table>
-		</div>
-		<div id="shadow"></div>
+	<div id="menu">
+		<table id="menuContent">
+			<tr><td><img src="Resources/UserIcon.svg"><span style="font-size: 2em; margin:0px;">John Doe</span></td></tr>
+			<tr><td>Log out</td></tr>
+			<tr><td>Settings</td></tr>
+		</table>
 	</div>
+	<div id="shadow"></div>
 	<div id="left">
 		<ul id="categories">
 			<li class="active"> <img class="iconsLeft" src="Resources/inbox.png"> <div> <p> Inbox </p> </div> </li>
