Finished initial version

--- a/Client/faq.html
+++ b/Client/faq.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>ToDo++</title>
-	<link rel="stylesheet" type="text/css" href="CSS/index.css">
 	<link rel="stylesheet" type="text/css" href="CSS/faq.css">
-	<link href="https://fonts.googleapis.com/css?family=Passion+One|Fredoka+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu|Fredoka+One" rel="stylesheet">
 	<link rel="icon" href="Resources/favicon.ico" type="image/x-icon" />
 </head>
 <script> 
@@ -13,29 +12,22 @@
 <body>
 <header>
 	<img id="logo" src="Resources/logo.png">
-	<div><a href="faq.html"> FAQ </a></div>
-	<div id="showLogIn"><a> Log in </a></div>
 </header>
 <main>
-	<img src="Resources/triangle.png" id="triangle">
-	<div id="logInWindow">
-		<div><input type="username" name="username" placeholder="Your username" required /></div>
-		<div><input type="password" name="password" placeholder="Your password" required /></div>
-		<div id="login">Log in</div>
-	</div>
 	<div id="contentFAQ">
 	<h2>Frequently asked questions </h2><br>
 	<p class="question"> Q: How does it work?</p> 
 	<p class="answer"> A: Magic. </p><br>
 	<p class="question"> Q: Is it free? </p>
-	<p class="answer"> A: Yes, it is.</p>
+	<p class="answer"> A: Yes, it is.</p><br>
+	<p class="question"> Q: How much time did it take to implement it? </p>
+	<p class="answer"> A: I started this as an university project. I abandoned it and decided a year later to continue working on it to exercise my PHP skills.</p>
 	</div>
 </main>
 
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>	
-<script src="JavaScript/faq.js"></script>
+
 <footer>
-	&#169; 2017 jtimotei
+	&#169; 2018 jtimotei
 </footer>
 </body>
 </html>
